# lastdrop-game

./: .bash_history  .gitignore  .wget-hsts  AI_ANIMATION_NEXT_STEPS.md  AI_GAMEMASTER_ROADMAP.md  AI_PLAYER_CLOUDIE.md  ANDROID_INTEGRATION.md  API_DOCUMENTATION.md  BLE_CONNECTION_TODO.md  BOARD_SETTINGS_GUIDE.md  DEBUG_PROMPT.md  ESP32_ARCHITECTURE.md  ESP32_GODICE_DIRECT_CONNECTION.md  ESP32_INTEGRATION.md  ESP32_PAIRING_IMPLEMENTATION.md  ESP32_STANDALONE_DESIGN.md  ESP32_WIFI_LOGGING_SETUP.md  ESP32_WIFI_LOGGING_SUMMARY.md  EXPO_PROJECT_DESCRIPTION.txt  EXPO_SPEECH_LAKSHNA_2_PAGES.md  FIXES_APPLIED.md  HALL_SENSOR_DUAL_MODE.md  INTRO_AI_MAIN_INTERFACE_ROADMAP.md  INTRO_AI_TESTING_GUIDE.md  LED_TROUBLESHOOTING.md  LOTTIE_ANIMATION_GUIDE.md  MULTI_BOARD_PAIRING_GUIDE.md  PHASE_2_COMPLETE.md  PIN_AUTHENTICATION_GUIDE.md  POLISH_SUMMARY.md  PROFILE_SYSTEM_IMPLEMENTATION.md  README.md  RULEBOOK.md  SOUND_EFFECTS_ROADMAP.md  SOUND_GENERATION_GUIDE.md  TESTING_GUIDE.md  TWO_DICE_COLOR_INTEGRATION.md  VIRTUAL_DICE_IMPLEMENTATION.md  VOICE_SETTINGS_GUIDE.md  WEB_ECOSYSTEM_PLAN.md  (+25 more)
.github/: copilot-instructions.md
.ssh/: known_hosts  known_hosts.old
DOCS/: ANDROID_BLE_INTEGRATION.md  ANDROID_ROLLING_INTEGRATION.md  API_PROTOCOL.md  BLE_PROTOCOL.md  ESP32_CHANGES_SUMMARY.md  ESP32_IMPROVEMENTS_NEEDED.md  IMPLEMENTATION_GUIDE.md  INTEGRATED_FIRMWARE_GUIDE.md  LED_ANIMATIONS.md  PLAYER_COLOR_SELECTION.md  PLAYER_CONFIG_INTEGRATION.md  PLAYER_CONFIG_TESTING.md  SECURITY.md  SYNC_COMPLETE.md  TEST_MODE_1_IMPLEMENTATION.md  (+1 more)
godicesdklib/src/main/c/jni/: CMakeLists.txt
(+360 files in other folders)
